[gd_scene load_steps=6 format=3 uid="uid://dqarxwqsgh6jj"]

[ext_resource type="Script" uid="uid://eyxsgu2hvms8" path="res://scripts/gap_tile.gd" id="1_eandu"]
[ext_resource type="Texture2D" uid="uid://b60i7b2nyokgx" path="res://sprites/grid_tiles.png" id="2_kdi4f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fo582"]
atlas = ExtResource("2_kdi4f")

[sub_resource type="Curve" id="Curve_eandu"]
_data = [Vector2(0, 0.506247), 0.0, 0.0, 0, 0, Vector2(0.178363, 1), 0.0, 0.0, 0, 0, Vector2(0.722222, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Gradient" id="Gradient_kdi4f"]
offsets = PackedFloat32Array(0, 0.28, 0.636667, 1)
colors = PackedColorArray(0.811765, 0.662745, 0.541176, 0.792157, 0.6, 0.384, 0.4704, 0.796078, 0.2331, 0.253635, 0.37, 0.847059, 0.231373, 0.25098, 0.368627, 0)

[node name="GapTile" type="Sprite2D"]
use_parent_material = true
texture = SubResource("AtlasTexture_fo582")
offset = Vector2(0, 4)
hframes = 4
vframes = 4
frame = 3
script = ExtResource("1_eandu")
frame_index_map = Dictionary[int, int]({
0: 0,
1: 3,
2: 3
})

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-8, 0, 0, -4, 8, 0, 0, 4)

[node name="CreateParticles" type="CPUParticles2D" parent="."]
position = Vector2(0, -2)
emitting = false
amount = 50
lifetime = 0.5
one_shot = true
speed_scale = 1.3
explosiveness = 0.78
randomness = 1.0
lifetime_randomness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(6, 4)
direction = Vector2(0, -1)
spread = 40.0
gravity = Vector2(0, 0)
initial_velocity_min = 25.0
initial_velocity_max = 50.0
angular_velocity_max = 341.82
radial_accel_max = 91.92
tangential_accel_max = 28.28
damping_min = 71.213
damping_max = 71.213
scale_amount_curve = SubResource("Curve_eandu")
color_ramp = SubResource("Gradient_kdi4f")

[connection signal="input_event" from="Area2D" to="." method="_on_input_event"]
